--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                      </div>
              </div>
 
-             <button class="reset" onclick="reset()">Reset</button>
+             <button class="reset" onclick="reset()">Reset Scoreline</button>
 
              <div class="inner-body">
                 <h3>AWAY</h3>
