Added minus buttons

--- a/index.html
+++ b/index.html
@@ -9,9 +9,16 @@
                   <h2 id="box"> </h2>
                     <div id="score-area">
                         <div id="increment">
-                            <button class="plus-one" onclick="plusOne()">+1</button>
-                            <button class="plus-two" onclick="plusTwo()">+2</button>
-                            <button class="plus-three" onclick="plusThree()">+3</button>
+                            <div class="plus-section">
+                                <button class="plus-one" onclick="plusOne()">+1</button>
+                                <button class="plus-two" onclick="plusTwo()">+2</button>
+                                <button class="plus-three" onclick="plusThree()">+3</button>
+                            </div>
+                            <div class="minus-section">
+                                <button class="minus-one" onclick="minusOne()">-1</button>
+                                <button class="minus-two" onclick="minusTwo()">-2</button>
+                                <button class="minus-three" onclick="minusThree()">-3</button>
+                            </div>
                         </div>
                      </div>
              </div>
@@ -23,9 +30,15 @@
                  <h2 id="box2"></h2>
                    <div id="score-area">
                        <div id="increment">
-                           <button class="plus-one" onclick="onePlus()" >+1</button>
-                           <button class="plus-two" onclick="twoPlus()">+2</button>
-                           <button class="plus-three" onclick="threePlus()">+3</button>
+                        <div class="plus-section">
+                            <button class="plus-one" onclick="onePlus()" >+1</button>
+                            <button class="plus-two" onclick="twoPlus()">+2</button>
+                            <button class="plus-three" onclick="threePlus()">+3</button>
+                        </div>    
+                        <div class="minus-section">
+                           <button class="Minus-one" onclick="oneMinus()">-1</button>
+                           <button class="Minus-two" onclick="twoMinus()">-2</button>
+                           <button class="Minus-three" onclick="threeMinus()">-3</button>
                        </div>
                     </div>
             </div>
